--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,14 +4,17 @@ layout: default
 
 <!-- Page Header -->
 {% if page.background %}
-<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
+<header class="masthead">
   {% else %}
   <header class="masthead">
     {% endif %}
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="col-lg-6 col-md-12 mx-auto">
+          <img src="{{ page.background | prepend: site.baseurl | replace: '//', '/' }}" />
+        </div>
+        <div class="col-lg-6 col-md-12 mx-auto">
           <div class="post-heading">
             <h1>{{ page.title }}</h1>
             {% if page.subtitle %}
