--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,8 +8,7 @@ layout: default
   {% else %}
   <header class="masthead">
     {% endif %}
-    <div class="overlay"></div>
-    <div class="container">
+    <div class="">
       <div class="row">
         <div class="col-lg-6 col-md-12 mx-auto">
           <img src="{{ page.background | prepend: site.baseurl | replace: '//', '/' }}" />
