--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,10 +10,10 @@ layout: default
     {% endif %}
     <div class="">
       <div class="row">
-        <div class="col-lg-6 col-md-12 mx-auto">
+        <div class="col-lg-6 col-md-12">
           <img src="{{ page.background | prepend: site.baseurl | replace: '//', '/' }}" />
         </div>
-        <div class="col-lg-6 col-md-12 mx-auto">
+        <div class="col-lg-6 col-md-12">
           <div class="post-heading">
             <h1>{{ page.title }}</h1>
             {% if page.subtitle %}
