--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,7 @@ layout: default
             {% if site.description %}
             <span class="subheading">{{ site.description }}</span>
             {% endif %}
+            <a class="btn btn-light" href="/guide/lawn-bowls-product-recommendations">Find Top Rated Bowls Now</a>
           </div>
         </div>
       </div>
