--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
         <div class="col-lg-6 col-md-12 page-img">
           <img src="{{ page.background | prepend: site.baseurl | replace: '//', '/' }}" />
         </div>
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-6 col-md-12 page-titles">
           <div class="post-heading">
             <h1>{{ page.title }}</h1>
             {% if page.subtitle %}
