--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,16 +14,18 @@ layout: default
           <img src="{{ page.background | prepend: site.baseurl | replace: '//', '/' }}" />
         </div>
         <div class="col-lg-6 col-md-12 page-titles">
-          <div class="post-heading">
-            <h1>{{ page.title }}</h1>
-            {% if page.subtitle %}
-            <h2 class="subheading">{{ page.subtitle }}</h2>
-            {% endif %}
-            <span class="meta">Posted by
-              <a href="#">{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}</a>
-              on {{ page.date | date: '%B %d, %Y' }} &middot; {% include read_time.html
-              content=page.content %}
-            </span>
+          <div class="container">
+            <div class="post-heading">
+              <h1>{{ page.title }}</h1>
+              {% if page.subtitle %}
+              <h2 class="subheading">{{ page.subtitle }}</h2>
+              {% endif %}
+              <span class="meta">Posted by
+                <a href="#">{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}</a>
+                on {{ page.date | date: '%B %d, %Y' }} &middot; {% include read_time.html
+                content=page.content %}
+              </span>
+            </div>
           </div>
         </div>
       </div>
