--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,9 @@ layout: default
               <h2 class="subheading">{{ page.subtitle }}</h2>
               {% endif %}
               <span class="meta">
-                Last updated: {{ page.date | date: '%B %d, %Y' }} &middot; {% include read_time.html
+                Last updated: {{ page.date | date: '%d %B %Y' }} &middot;
+                <br /> 
+                {% include read_time.html
                 content=page.content %}
                 <meta itemprop="dateModified" content="{{ page.date | date: '%Y-%m-%dT%H:%M:%S.%Lz' }}">
               </span>
