--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ layout: default
             {% if site.description %}
             <span class="subheading">{{ site.description }}</span>
             {% endif %}
-            <a class="btn btn-light mt-3" href="{{ site.baseurl }}/guide/lawn-bowls-product-recommendations">Find Top Rated Bowls Now</a>
+            <a class="btn btn-light mt-3" href="{{ site.baseurl }}/guide/lawn-bowls-product-recommendations">Start Here</a>
           </div>
         </div>
       </div>
@@ -25,10 +25,19 @@ layout: default
   </header>
 
   <div class="container">
+    <!-- thomasgriffin.com -->
+    
+    <!-- lead magnet -->
+    
+    <!-- quote -->
+    
+    <!-- intro to me -->
+
+    <!-- Home Post List -->
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
 
-        <!-- Home Post List -->
+        
         {% for post in site.posts limit : 5 %}
 
         <article class="post-preview">
@@ -62,4 +71,6 @@ layout: default
 
       </div>
     </div>
+
+    <!-- final quote -->
   </div>
