--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand" href="{{"/" | relative_url }}"><img height="45" width="45" src="/img/jh_logo.svg" />{{ site.title | escape }}</a>
+    <a class="navbar-brand" href="{{"/" | relative_url }}"><img height="45" width="45" src="{{ '/img/jh_logo.svg' | prepend: site.baseurl | replace: '//', '/' }}" />{{ site.title | escape }}</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fa fa-bars"></i>
     </button>
