--- a/_includes/drill-pack-feature.html
+++ b/_includes/drill-pack-feature.html
@@ -3,7 +3,7 @@
     <h2>Get The Complete Lawn Bowls Drill Pack</h2>
     <p>The Jack High Bowls Drill Pack is available now for instant download.</p>
     <p>Perfect for beginners and improving players looking to be more consistent and win more games!</p>
-    <a class="btn btn-light mt-3" href="{{ site.baseurl }}/lawn-bowls-downloadable-drill-pack">START HERE</a>
+    <a class="btn btn-light mt-3" href="{{ site.baseurl }}/lawn-bowls-downloadable-drill-pack">Win More Games Today</a>
   </div>
   <div class="col-lg-6 col-md-12">
     <img src="" />
