--- a/_includes/drill-pack-feature.html
+++ b/_includes/drill-pack-feature.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row pack-feature">
   <div class="col-lg-6 col-md-12">
     <h2>Get The Complete Lawn Bowls Drill Pack</h2>
     <p>The Jack High Bowls Drill Pack is available now for instant download.</p>
