--- a/_includes/drill-pack-feature.html
+++ b/_includes/drill-pack-feature.html
@@ -6,6 +6,6 @@
     <a class="btn btn-light mt-3" href="{{ site.baseurl }}/lawn-bowls-downloadable-drill-pack">Win More Games Today</a>
   </div>
   <div class="col-lg-6 col-md-12">
-    <img src="" />
+    <img src="{{ '/img/drill-pack.png' | prepend: site.baseurl | replace: '//', '/' }}" />
   </div>
 </div>
