--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,17 +3,19 @@ layout: default
 ---
 
 <!-- Page Header -->
-{% if page.background %}
+
 <header class="masthead">
-  {% else %}
-  <header class="masthead">
-    {% endif %}
-    <div class="">
+  
       <div class="row">
+        {% if page.background %}
         <div class="col-lg-6 col-md-12 page-img"> 
           <img src="{{ page.background | prepend: site.baseurl | replace: '//', '/' }}" />
         </div>
         <div class="col-lg-6 col-md-12 page-titles">
+        {% else %}
+          
+        <div class="col-md-12 page-titles">
+        {% endif %}
             <div class="post-heading">
               <h1>{{ page.title }}</h1>
               {% if page.subtitle %}
@@ -29,7 +31,6 @@ layout: default
             </div>
         </div>
       </div>
-    </div>
   </header>
 
   <div class="container">
