--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,16 +6,14 @@ layout: default
 
 <header class="masthead">
   
-      <div class="row">
+      <div class="row justify-content-center">
         {% if page.background %}
         <div class="col-lg-6 col-md-12 page-img"> 
           <img src="{{ page.background | prepend: site.baseurl | replace: '//', '/' }}" />
         </div>
-        <div class="col-lg-6 col-md-12 page-titles">
-        {% else %}
-          
-        <div class="col-md-12 page-titles">
         {% endif %}
+          
+        <div class="col-lg-6 col-md-12 page-titles">
             <div class="post-heading">
               <h1>{{ page.title }}</h1>
               {% if page.subtitle %}
